Wed Jul 16 12:21:20 2003  Joern Thyssen  <jth@gnubg.org>

	Change rollouts routines to accept a progress callback instead
	of currently hardcoded GTK+ calls.

	* rollout.c (GeneralEvaluation, GneralEvaluationR,
	GeneralCubeDecision, GeneralCubeDecisionR): change prototype to
	include progress callback.
	* rollout.c (RolloutGeneral): replaced hardcoded calls with
	calls to passed progress callback.
	* progress.c: new file with default progress initialisers and 
	callbacks.
	* gnubg.c (CommandRollout): bring up hint dialog after
	"rollout =cube" and "rollout =1 =2 =3". 
	* gnubg.c, gtkchequer.c, gtkcube.c, database.c, analysis.c, external.c: 
	change calls to rollout functions.
	* gtkgame.c: move GTK rollout progress stuff to new file progress.c

Tue Jul 15 19:52:54 2003  Holger Bochnig <hbgg@gmx.net>

	* set.c: sockets: added includes for Windows

Tue Jul 15 17:07:45 2003  Holger Bochnig <hbgg@gmx.net>

	* gnubgmodule.c gnubgmodule.h: if-guard python extensions

Tue Jul 15 00:11:02 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (GeneralCubeDecisionR): fix bug leading to wrong
	cube decision rollouts.

Sun Jul 13 22:24:12 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (OutputMoveFilterPly): add a newline
	* text.c (OutputEvalContextsForRollout): fix some indentation
	problems.

Sun Jul 13 20:02:12 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c (PythonPositionID, PythonPositionFromID,
	PythonPositionFromBearoff, PythonPositionBearoff): new functions.

Sun Jul 13 18:17:05 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* make sure rollouts skip completed trials without wasting time
		
Sun Jul 13 19:49:16 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.py: new file (read during startup).


Sun Jul 13 19:17:27 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (MoveListRollout): call HandleXAction.

Sun Jul 13 12:06:05 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandRollout): fix some non-ANSI decls.
	* configure.in: new autoconf magic for python